# ChangeLog for app-admin/haskell-updater
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/haskell-updater/ChangeLog,v 1.79 2015/01/04 12:52:01 slyfox Exp $

  04 Jan 2015; Sergei Trofimovich <slyfox@gentoo.org>
  haskell-updater-1.2.8.ebuild:
  Stabilize on alpha/amd64/ia64/ppc/ppc64/sparc/x86

*haskell-updater-1.2.8 (04 Jan 2015)

  04 Jan 2015; Sergei Trofimovich <slyfox@gentoo.org>
  +haskell-updater-1.2.8.ebuild:
  Version bump.

  02 Jan 2015; Sergei Trofimovich <slyfox@gentoo.org>
  haskell-updater-1.2.7.ebuild:
  Stabilize on alpha/amd64/ia64/ppc/ppc64/sparc/x86

*haskell-updater-1.2.7 (02 Jan 2015)

  02 Jan 2015; Sergei Trofimovich <slyfox@gentoo.org>
  +haskell-updater-1.2.7.ebuild:
  Version bump. This version is able to detect improperly registered packages.

  01 Jan 2015; Sergei Trofimovich <slyfox@gentoo.org>
  haskell-updater-1.2.6.ebuild:
  Stabilize on alpha/amd64/ia64/ppc/ppc64/sparc/x86

*haskell-updater-1.2.6 (01 Jan 2015)

  01 Jan 2015; Sergei Trofimovich <slyfox@gentoo.org>
  +haskell-updater-1.2.6.ebuild, metadata.xml:
  Version bump, this version is able to restore from many breakages possible
  with major ghc-package / haskell-cabal eclass change done 1 Jan 2015.

*haskell-updater-1.2.3 (01 Aug 2014)

  01 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org>
  +haskell-updater-1.2.3.ebuild, -haskell-updater-1.2.0.10-r1.ebuild,
  -haskell-updater-1.2.0.11.ebuild, -haskell-updater-1.2.0.12.ebuild,
  -haskell-updater-1.2.0.9.ebuild:
  Version bump: ghc-7.8 support.

  17 May 2014; Agostino Sarubbo <ago@gentoo.org> haskell-updater-1.2.1.ebuild:
  Stable for alpha, wrt bug #502602

  10 May 2014; Sergei Trofimovich <slyfox@gentoo.org>
  haskell-updater-1.2.1.ebuild:
  Allow Cabal-1.20.

  19 Mar 2014; Agostino Sarubbo <ago@gentoo.org> haskell-updater-1.2.1.ebuild:
  Stable for ia64, wrt bug #502602

  12 Mar 2014; Agostino Sarubbo <ago@gentoo.org> haskell-updater-1.2.1.ebuild: